project(chipperino)
cmake_minimum_required(VERSION 3.0)
add_executable(chipperino main.cpp)
add_executable(tests tests.cpp)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR})
target_compile_features(chipperino PUBLIC cxx_std_17)
target_compile_features(tests PUBLIC cxx_std_17)
